--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>JavaScript</title>
     <link rel="stylesheet" href="style.css" />
     <!-- <script src="script.js"></script> -->
-    <!-- <script src="object.js"></script> -->
-    <script src="function.js"></script>
+    <script src="object.js"></script>
+    <!-- <script src="function.js"></script> -->
     <!-- <script src="loop.js"></script> -->
   </head>
   <body>
